tests/error/sha3.uplc
(program 0.0.0 [(builtin sha3_256) (con integer 1236789435)])

